--- a/src/App.css
+++ b/src/App.css
@@ -7,14 +7,14 @@
   justify-content: center;
   font-family: Roboto, sans-serif;
   width: 444px;
+  margin-bottom: 40px;
   background: rgba(255, 255, 255, 0.75);
-  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+  border-radius: 40px;
   backdrop-filter: blur( 6.5px );
   -webkit-backdrop-filter: blur( 6.5px );
-  border-radius: 40px;
+  box-shadow: 3px 14px 22px 4px rgba(194, 194, 194, 0.62);
   -webkit-box-shadow: 3px 14px 22px 4px rgba(194, 194, 194, 0.62);
   -moz-box-shadow: 3px 14px 22px 4px rgba(194, 194, 194, 0.62);
-  box-shadow: 3px 14px 22px 4px rgba(194, 194, 194, 0.62);
 }
 
 .todoDone {
